# datasync

./: README.md  pyproject.toml
src/datasync/: __init__.py  __main__.py  api.json  downloader.py  schema.json  update.py  utils.py  wrappers.py
