[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datasync"
version = "0.1.0"
description = "datasync is a tool for localizing and synchronizing data from Tushare."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "tushare>=1.4.24",
]

[tool.setuptools.package-data]
datasync = ["*.json"]